objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactGUID__c</fullName>
        <formula>Contact.ContactGUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactGUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <formula>CASESAFEID(Campaign.Event__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IQ_Source_Id__c</fullName>
        <label>IQ Source Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsOwner__c</fullName>
        <formula>Owner__c =  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lost_Details__c</fullName>
        <label>Lost Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Record__c</fullName>
        <formula>HYPERLINK('/' &amp; Id , 'LINK'   , '_blank')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objection_Code__c</fullName>
        <label>Objection Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bad Experience with Emerald</fullName>
                </value>
                <value>
                    <fullName>Business Conflict</fullName>
                </value>
                <value>
                    <fullName>Company Out of Business</fullName>
                </value>
                <value>
                    <fullName>Content not as good as in the past</fullName>
                </value>
                <value>
                    <fullName>Content not relevant</fullName>
                </value>
                <value>
                    <fullName>Cost/Budget</fullName>
                </value>
                <value>
                    <fullName>COVID - Health Concerns</fullName>
                </value>
                <value>
                    <fullName>COVID - No Budget</fullName>
                </value>
                <value>
                    <fullName>COVID - Travel Restrictions</fullName>
                </value>
                <value>
                    <fullName>Exhibitors / Suppliers not relevant</fullName>
                </value>
                <value>
                    <fullName>Hung Up</fullName>
                </value>
                <value>
                    <fullName>No Longer with Company</fullName>
                </value>
                <value>
                    <fullName>Not enough Exhibitors / Suppliers</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Personal Issues</fullName>
                </value>
                <value>
                    <fullName>Prefers another Show (Indicate which show)</fullName>
                </value>
                <value>
                    <fullName>Previously attended - not beneficial</fullName>
                </value>
                <value>
                    <fullName>Repetitive Content</fullName>
                </value>
                <value>
                    <fullName>Scheduling Conflict - Other Show</fullName>
                </value>
                <value>
                    <fullName>Scheduling Conflict - Personal / Religious</fullName>
                </value>
                <value>
                    <fullName>Severe Weather, Geo-Political, Unrest, etc.</fullName>
                </value>
                <value>
                    <fullName>Timing Issue (Does not meet buying cycle)</fullName>
                </value>
                <value>
                    <fullName>Unable to Reach</fullName>
                </value>
                <value>
                    <fullName>Undesirable Location (City/Venue)</fullName>
                </value>
                <value>
                    <fullName>Visa denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PURL__c</fullName>
        <formula>IF(
OR(
 ISBLANK( ContactGUID__c ),
 ISBLANK( Registered_Event_Code__c ),
 ISBLANK( Promo_Code__c ),
 CONTAINS(Promo_Code__c  , "Duplicate") 
),
Null,
$CustomMetadata.EE_PURL__mdt.http_registration_experientevent_com_s.PURL1__c &amp; Registered_Event_Code__c &amp; $CustomMetadata.EE_PURL__mdt.cg.MasterLabel &amp; ContactGUID__c &amp; $CustomMetadata.EE_PURL__mdt.marketingcode.MasterLabel &amp; Promo_Code__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Event_Code__c</fullName>
        <formula>Campaign.Event__r.Registration_Event_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registered Event Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Promo_Code__c</fullName>
        <label>Registration Promo Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>DO NOT USE</description>
        <label>Emerald Status (DO NOT USE)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clicks</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Distinct Click</fullName>
                </value>
                <value>
                    <fullName>Distinct Open</fullName>
                </value>
                <value>
                    <fullName>Opened</fullName>
                </value>
                <value>
                    <fullName>Optout</fullName>
                </value>
                <value>
                    <fullName>Not Emailable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
    <validationRules>
        <fullName>Lost_Detailed_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
IsPickval( Objection_Code__c, 'Other'),
IsPickval( Objection_Code__c, 'Prefers another Show (Indicate which show)')),
(ISBLANK(Lost_Details__c)))
&amp;&amp; $Permission.Bypass_Validation_rules_for_Users = False</errorConditionFormula>
        <errorDisplayField>Lost_Details__c</errorDisplayField>
        <errorMessage>Please provide additional details</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ObjectionCodeRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
IsPickval( Status , 'Not Interested'),
(ISBLANK(Text( Objection_Code__c ))))
&amp;&amp; $Permission.Bypass_Validation_rules_for_Users = False</errorConditionFormula>
        <errorDisplayField>Objection_Code__c</errorDisplayField>
        <errorMessage>Objection Code is required.</errorMessage>
    </validationRules>
</CustomObject>